GNOME Bugzilla – Bug 668951
Fix warnings when weak_unreffing a finalized object
Last modified: 2012-02-06 15:44:03 UTC
Fixed these warnings by calling clutter_state_remove_key_internal() directly instead of going through clutter_state_remove_key() which sets the inert flag to FALSE implicitly. Also fixed up the loop a little (removed one of the unneeded goto statements). Stack trace from the g_log warning message:
+ Trace 229554
Created attachment 206350 [details] [review] Patch to fix the warning Previous attach failed since I forgot to provide a description text...
thanks for the patch; pushed to master