Fixed clutter_state_remove_key_internal() to propagate the is_inert state

This was causing warnings when calling g_object_weak_unref on an
already finalized object.

https://bugzilla.gnome.org/show_bug.cgi?id=668951